[package]
name = "photo-fix"
version = "0.1.0"
edition = "2021"

[dependencies]
fltk = { version = "1.4", features = ["fltk-bundled"] }
rayon = "1.10"
exif = "0.6"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
