[package]
name = "photo-fix"
version = "0.1.0"
edition = "2021"
description = "A lightweight, high-performance photo sorting utility for Windows"
license = "MIT"
readme = "README.md"

[dependencies]
native-windows-gui = "1.0.12"
native-windows-derive = "1.0.3"
rayon = "1.10"
kamadak-exif = "0.6"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
